--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^12.23.6",
+    "howler": "^2.2.4",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-icon": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
